<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    style="@style/BookDetails"
    tools:context="com.suda.voice.BookActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/booktitle"
            android:textColor="#fff"
            android:textSize="30dp"
            />
    </LinearLayout>
    <LinearLayout
        android:padding="@dimen/activity_horizontal_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#8fff"
        >
        <TextView
            android:id="@+id/bookname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookname"
            />
        <View  android:layout_height="1px"
            android:layout_width="match_parent"
            android:background="@color/line_between"
            />
        <TextView
            android:id="@+id/author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author"
            />
        <View  android:layout_height="1px"
            android:layout_width="match_parent"
            android:background="@color/line_between"
            />
        <TextView
            android:id="@+id/publisher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/publisher"
            />
        <View  android:layout_height="1px"
            android:layout_width="match_parent"
            android:background="@color/line_between"
            />
        <TextView
            android:id="@+id/isbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isbn"
            />
        <View  android:layout_height="1px"
            android:layout_width="match_parent"
            android:background="@color/line_between"
            />
        <TextView
            android:id="@+id/callno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/callno"
            />
        <View  android:layout_height="1px"
            android:layout_width="match_parent"
            android:background="@color/line_between"
            />
        <TextView
            android:id="@+id/hold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hold"
            />

    </LinearLayout>

</LinearLayout>
